# protohackers-rs

./: .gitignore
0-smoke-test/: Cargo.toml  Dockerfile  fly.toml
0-smoke-test/src/: cli.rs  lib.rs  main.rs  server.rs
1-prime-time/: Cargo.toml  README.md
1-prime-time/src/: cli.rs  lib.rs  main.rs  prime.rs  server.rs
