[package]
name = "smoke-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smoke_test"
path = "src/lib.rs"

[[bin]]
name = "smoke-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
clap = { version = "4.0.32", features = [ "derive" ] } 
futures = "0.3"
chrono = "0.4.23"